Closed Bug 224598 Opened 22 years ago Closed 22 years ago

[FIX] one " around cols value causes weirdness in <frameset>

Categories

(Core :: Layout: Images, Video, and HTML Frames, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: doronr, Assigned: MatsPalmgren_bugz)

References

()

Details

(Keywords: testcase)

Attachments

(5 files, 1 obsolete file)

<frameset cols=13%,*"> With 2 frames, due to the lone ", the first frame takes over the whole width. Changing the position of the lone " to the start <frameset cols="13%,*> causes the left frame to take the whole width. Have none or 2 " (ie the correct way) fixes the issue. Minimized testcases: - With bug - http://www.nexgenmedia.net/evang/fotofresh/index.html - Without bug - http://www.nexgenmedia.net/evang/fotofresh/index2.html
The first case is exactly equivalent to: cols='13%,*"' while the second one is exactly equivalent to: cols='"13%,*' and we should be treating them identically, which we do. What is your suggested rendering there?
Attached patch Patch rev. 1 (obsolete) — Splinter Review
If we do it for " then we should do it for ' as well. I considered using Trim() but I chose StripChars() for values like cols=13%,*",
Boris, I didn't see your comment before posting the patch. I think Doron suggests that leading/trailing quotes should be ignored. I think we should just remove them everywhere.
Keywords: testcase
Summary: one " around cols value causes weirdness in <frameset> → [FIX] one " around cols value causes weirdness in <frameset>
We don't treat them the same actually - depending on where the " is, the frame we display changes. Mats got it right, we shouldn't mess up due to an leading or trailing " - the url of the bug shows that this is generated by PhotoShop btw.
I get 2 frames for '"13%,*' and 1 frame for '13%,*"'
Doron, I meant that we should treat cols=13%,*" the same as cols='13%,*"' not that we should treat the two totally different colspecs in comment 1 identically to each other. mats' patch is OK, I guess, if it gets lots and lots of testing... does it break compat with IE in the cols='13%,*"' case, eg?
I get 1 frame for: <frameset frameborder="no" cols="13%,*> on trunk.
doron, what does IE do with the following: 1) <frameset frameborder="no" cols="13%,*> 2) <frameset frameborder="no" cols='"13%,*'> ?
1) <frameset frameborder="no" cols="13%,*> In this case, IE goes wacky and misrenders the whole page - graphs are bleeding into scrollbars, weird stuff. 2) <frameset frameborder="no" cols='"13%,*'> this behaves like Mozilla, the right frame has 100%
OK, well the renderings for those two cases should be absolutely identical in Mozilla (and will be with or without Mats' patch; his patch just changes the rendering of both cases). You may also want to test: 1) <frameset frameborder="no" cols=13%,*"> vs 2) <frameset frameborder="no" cols='13%,*"'> in IE.
Mozilla Opera7 NS4 IE5 patch1-Mozilla Testcase #1: 100,0 13,87 100,0 13,87 13,87 Testcase #2: 100,0 13,87 100,0 13,87 13,87 Testcase #3: 0,100 0,100 0,100 --,13 0,100 Testcase #4: 13,87 0,100 50,50 0,100 13,87 numbers are "% width to left frame (google.com)" , " % to right (mozilla.org)" Could someone please post numbers for IE6.
> Testcase #3: 0,100 > Testcase #4: 13,87 I lied for the case when the quote comes first. In testcase 3, we parse the '>' and crud after it as part of the attr value, hence the 0,100. In testcase 4, that doesn't happen.
Comment on attachment 134717 [details] [diff] [review] Patch rev. 1 Make it a single StripChars call that strips all the chars, and r+sr=bzbarsky, since this makes us behave more compatibly.
Attachment #134717 - Flags: superreview+
Attachment #134717 - Flags: review+
Attached patch Patch rev. 2Splinter Review
Attachment #134717 - Attachment is obsolete: true
To Mats.
Assignee: frame → mats.palmgren
Checked in. Thanks for the patch, Mats!
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: