Strip quotes from inside col/row-specs (where there should be no quotes to start with, but some sites just code like that).  Bug 224598, patch by mats.palmgren@bredband.net (Mats Palmgren), r+sr=bzbarsky